# Book-Store

./: README.md  bookdb.spec  books.db  setup.cfg
src/: bookdb.py
src/Book Store/: backend.py
