[metadata]
name = bookstore
version = 1
license = MIT
description = A simple bookstore project with a sqlite backend
long_description = file: README.rst
author = Dillion Burns
author_email = 
classifiers=
[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
[options.packages.find]
where=src